force-app/main/default/objects/System_Log__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Populate the related content, if available.</description>
    <label>Content</label>
    <type>TextArea</type>
</CustomField>